fixed minor java version errors